--- a/1-webapp/templates/home.page.gohtml
+++ b/1-webapp/templates/home.page.gohtml
@@ -19,6 +19,7 @@
                 </form>
                 <hr />
                 <small>Your request came from {{.IP}}</small>
+                <small>From Session {{index .Data "test"}}</small>
             </div>
         </div>
     </div>
